2008-06-16  Ian Beckwith  <ianb@erislabs.net>

	* Thanks to John Gruenenfelder for:
	  + New elvi: arxiv.
	  + surfraw-update-path: fix csh syntax.
	* wetandwild: switched to weather.com, as yahoo now uses AJAX.
	  Command line options and SURFRAW_weather_* variables no
	  longer supported.
	* port: fixed, original site is back.
	* austlii: fixed search URL and test.
	  Method now defaults to 'auto'.
	* translate: fixed URLs.
	* w3css: fixed test.
	* sundocs: removed, use sunonesearch.
	* xxx: removed, use arxiv.
	* test/runtests: prefer decoded_content if available.

2008-03-24  Ian Beckwith  <ianb@erislabs.net>

	* Thanks to James TD Smith for the following:
	  + New elvis: javasun - search Java API Docs.
	  + google: -country option to specify country.
	    Also respects SURFRAW_lang variable.

2008-03-11  Ian Beckwith  <ianb@erislabs.net>

	* debpackages/debcontents: updated ubuntu search.
	* freedb/cddb: updated options.
	* debbugs: fixed indentation.
	* port: point to what will hopefully be new site.
	* README, rae, currency: convert to utf-8.
	* austlii: fixed test.

2008-02-11  Ian Beckwith  <ianb@erislabs.net>

	* New elvis: sunonesearch (replaces sunsolve).
	* surfraw.IN, rfc: remove bashisms.
	* cnn: fixed url.
	* debcontents: updated ubuntu distribution.
	* deblists: rewrote for new search interface.
	* debpackages: updated debian url.
	* genpkg: as straight search has gone, we now go to
	  packages.gentoo.org/packages/<arg>.
	* yubnub: disable requoting (thanks to Nathaniel Heinrichs).
	* sunsolve: removed, replaced by sunonesearch.
	* cddb, freebsd, pgpkeys, w3link, webster, ebay(cn): fixed tests.
	* surfraw.1.IN, elvi.1sr.IN: properly quote hyphens.
	* Updated my email address.

2007-10-06  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Added SURFRAW_lang variable to set default country/language.
	  Affected elvi: amazon, bbcnews, ebay, ixquick, leodict,
	  opensearch, translate, wetandwild, wikipedia.
	  Thanks to Simon Ernst for the idea.