@@ -141,14 +141,14 @@ w3_url_escape () {
 		     s/+/%2B/g;
 #		     s/ /+/g;
 		     s/ /%20/g;
-			 s/(/%28/g;
-			 s/)/%29/g;
+		     s/(/%28/g;
+		     s/)/%29/g;
 		     s/"/%22/g;
 		     s/#/%23/g;
 		     s/\$/%24/g;
 		     s/&/%26/g;
 		     s/,/%2C/g;
-		     s/\./%2E/g;
+#		     s/\./%2E/g;
 		     sx/x%2Fx;
 		     s/:/%3A/g;
 		     s/;/%3B/g;
@@ -165,6 +165,7 @@ w3_url_escape () {
 		     s/|/%7C/g;
 		     s/}/%7D/g;
 		     s/~/%7E/g;
+		     s/`/%60/g;
 		   '"s/'/%27/g"
 }
 
