@@ -2,3 +2,5 @@ debcontents surfraw
 usr/bin.*surfraw
 debcontents -u surfraw
 usr/bin.*surfraw
+debcontents -distro=slink -a grep
+base/help/.*grep
