@@ -2,4 +2,6 @@ debpackages surfraw
 Found <strong>\d+</strong> matching package
 debpackages -u surfraw
 Found <strong>\d+</strong> matching package
+debpackages -a surfraw
+Found <strong>\d+</strong> matching package
 
